# jinja-flow

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/jflow/: __init__.py  __main__.py  render.py  sources.py
src/jinja_flow/: __init__.py  __main__.py  config.py  render.py  sources.py
tests/: test_cli.py  test_config.py  test_integration.py  test_render.py  test_sources.py
tests/fixtures/csv_basic/: config.yaml  expected.txt  items.csv
tests/fixtures/driver_iteration/: config.yaml  expected.txt
tests/fixtures/excel_basic/: config.yaml  expected.txt  products.xlsx
tests/fixtures/files_lookup/: config.yaml  expected.txt  items.csv
tests/fixtures/files_lookup/docs/: WidgetA_spec.md  WidgetB_spec.md
tests/t1/: Untitled spreadsheet.xlsx  jf.yaml
